# openclaw-dreamweaver

./: .gitignore  DreamWeaver + pi.bat  dashboard.html  dream_2026_stock.json  dream_brain.json  dream_config.json  dream_full_log.json  dream_output.json  dream_think.json  dreamweaver.db-shm  dreamweaver.db-wal  pyproject.toml  停止服务.bat  启动 DreamWeaver.bat  快速做梦.bat
.pi-extension/: pi-dreamweaver.ts
openclaw_plugins/: __init__.py
openclaw_plugins/dreamweaver/: __init__.py  __main__.py  action_engine.py  adaptive_router.py  api.py  config.py  database.py  dream_service.py  error_handler.py  ethics.py  idle_detector.py  llm_providers.py  meta_collector.py  meta_learner.py  models.py  motif_generator.py  obsidian_writer.py  prompt_bandit.py  quality_metrics.py  resource_monitor.py  scheduler.py  self_model.py  self_play.py  skill_formatter.py  task_analyzer.py  trending_fetcher.py  vault_analyzer.py
openclaw_plugins/dreamweaver/frontend/: DreamIndicator.jsx  DreamPanel.jsx
openclaw_plugins/dreamweaver/roles/: __init__.py  base.py  critic.py  genius.py  judge.py  mutator.py  refiner.py
openclaw_plugins/dreamweaver/tests/: test_api.py  test_database.py  test_dream_service.py  test_idle_detector.py  test_motif_generator.py  test_obsidian_writer.py  test_resource_monitor.py  test_self_play.py
tests_integration/: test_deepseek.py
产品需求文档：OpenClaw DreamWeaver 扩展/: 产品需求文档：OpenClaw DreamWeaver 扩展.md
