[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "openclaw-dreamweaver"
version = "0.1.0"
description = "🌙 DreamWeaver — 梦境自主进化引擎"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "DreamWeaver Team"},
]
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "aiofiles>=23.0",
]

[project.scripts]
dreamweaver = "openclaw_plugins.dreamweaver.__main__:main"

[tool.setuptools.packages.find]
include = ["openclaw_plugins*"]
